# ruff-demo

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: check_example.py  format_example.py
