[project]
name = "ruff-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I",]
ignore = ["F401"]
